# FileForge

./: CMakeLists.txt  DotNetMods.cs  FFAction.cs  FFBaseDockContent.cs  FFNotTestedException.cs  FFSettings.cs  FFUndoable.cs  File Forge.csproj  File Forge.sln  FormAbout.cs  FormMain.Designer.cs  FormMain.cs  Program.cs  README.TXT  TODO
FFHexEditor/: FFHexEditor.cs  FFHexTableView.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Selection/: SelectionManager.cs  SelectionManager.dia
Testworks/: CMakeLists.txt  Testworks.config  Testworks.csproj  conditional_compile_details.txt
Testworks/Properties/: AssemblyInfo.cs
Testworks/Selection/: SelectionManager.Test.cs
diagrams/: Primary.dia
